sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:16: error: reassignment to val
    i=i-1
     ^